2008-04-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* inst/test-tools.R (checkMatrix): test <Ops> not only for dMatrix
	* R/Ops.R: more methods, for lMatrix/nMatrix

2008-04-24  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/expm.R: new file for all expm() methods; notably new ones for
	diagonal*, triangular*, symmetric* and also simple "matrix".

2008-04-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dsyMatrix.R: setAs(.) rather than setIs(.)  "to dpoMatrix"

	* inst/test-tools.R (assert.EQ.mat): better message when not equal

	* src/dgeMatrix.c (dgeMatrix_matrix_crossprod): allow integer RHS.

	* R/AllClass.R (ddiMatrix,ldiMatrix): extend [dl]Matrix instead of
	[dl]denseMatrix {identical slots; but more logical method dispatch}

2008-04-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sparseMatrix.R (summary): use length(<i-slot>) instead of nnzero()

	* R/diagMatrix.R (determinant): method

2008-04-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dsCMatrix.c (dsCMatrix_Cholesky): suppress CHOLMOD printing too

	* R/Rsparse.R (.viaC.to.R): uplo fix for symmetric & triangular

	* R/dsCMatrix.R (determinant): switch to use Cholesky( 'LDL' ) and
	its diagonal

2008-04-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dMatrix.R (Summary): short-cut for prod(<sparse>)

	* R/not.R: fix !<"U"-diag-ltrMatrix> ; drop {R < 2.6.0}-branch

	* R/Auxiliaries.R (tT2gT): fix for "U"-diag-ltTMatrix

	* R/AllClass.R: ltTMatrix validity: call (more stringent) tTMatrix_validate

2008-04-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Ops.R (Ops.x.x): aux.function, not just for (dMatrix,dMatrix)

	* R/Ops.R (.do.Logic.lsparse): fix NA case

	* R/Tsparse.R (replTmat): fix r.sym case, using indTri()

	* R/Auxiliaries.R (nnzero): fix special cases, using
	* R/Auxiliaries.R (indDiag): new utility
	* R/Auxiliaries.R (indTri): new argument 'diag'

	* R/dMatrix.R: Summmary(<ddenseMatrix>): different branch for dsy*
